@@ -2,7 +2,7 @@
 #define BOARD_ID    0x945c37e8
 
 #define MCU_STM32F1 1
-/* High-density device */
+#define STM32F10X_HD		/* High-density device */
 
 #define STM32_PLLXTPRE                  STM32_PLLXTPRE_DIV1
 #define STM32_PLLMUL_VALUE              6
