@@ -1,3 +1,9 @@
+2019-04-10  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* entry.c: Use STM32F10X_HD.
+	* board/board-stbee.h (STM32F10X_HD): Add.
+	* board/board-stm32-primer2.h (STM32F10X_HD): Add.
+
 2019-04-09  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* contrib/usart-stm32f103.c (usart_block_sendrecv): Support
